sqry-lang-python/tests/snapshots/relations_differential__python_async_calls_baseline.snap
---
source: sqry-lang-python/tests/relations_differential.rs
expression: normalized
---
[
    (
        "process",
        "fetch_data",
        2,
    ),
    (
        "process",
        "transform",
        3,
    ),
]
