sqry-lang-python/tests/snapshots/relations_differential__python_comprehensions_baseline.snap
---
source: sqry-lang-python/tests/relations_differential.rs
expression: normalized
---
[
    (
        "process",
        "process",
        3,
    ),
    (
        "process",
        "transform",
        2,
    ),
]
