sqry-lang-python/tests/snapshots/relations_differential__python_constructors_baseline.snap
---
source: sqry-lang-python/tests/relations_differential.rs
expression: normalized
---
[
    (
        "create",
        "Repository",
        3,
    ),
    (
        "create",
        "Service",
        4,
    ),
    (
        "create",
        "User",
        2,
    ),
]
