sqry-lang-python/tests/snapshots/relations_differential__python_exports_all_baseline.snap
---
source: sqry-lang-python/tests/relations_differential.rs
expression: normalized
---
[
    (
        "Class1",
        false,
    ),
    (
        "func1",
        false,
    ),
]
