sqry-lang-python/tests/snapshots/relations_differential__python_exports_baseline.snap
---
source: sqry-lang-python/tests/relations_differential.rs
expression: normalized
---
[
    (
        "ALIAS",
        false,
    ),
    (
        "PublicClass",
        false,
    ),
    (
        "public_function",
        false,
    ),
]
