sqry-lang-python/tests/snapshots/relations_differential__python_type_imports_baseline.snap
---
source: sqry-lang-python/tests/relations_differential.rs
expression: normalized
---
[
    (
        "User",
        "models",
        None,
        false,
    ),
    (
        "TYPE_CHECKING",
        "typing",
        None,
        false,
    ),
]
